# acts-fd

./: acts-fd.cabal
src/Control/Comonad/: Act.hs
src/Control/Monad/Trans/: Update.hs
src/Data/Semigroup/: Action.hs
