cabal-version:      3.0
name:               acts-fd

version:            0.1.0.0

synopsis:           Semigroup actions class using FunDeps

description:
  Type class for types equipped with semigroup action.

  There are ambiguity commonly exists between actions. For example,
  a group acts on itself by multiplication or conjugation
  or some other way depending on its context.

  Unlike already-published libraries for semigroup actions,
  this library aims to provide a way to disambiguate actions
  by newtype wrappers around the type acted on. It allows
  FunctionalDependencies from the type acted on
  to the type of semigroup, reducing gotchas of type inference
  and overlapping instances.

-- The license under which the package is released.
license:            BSD-3-Clause

-- The file containing the license text.
license-file:       LICENSE

-- The package author(s).
author:             Koji Miyazato

-- An email address to which users can send suggestions, bug reports, and patches.
maintainer:         viercc@gmail.com

category:           Algebra
build-type:         Simple

-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
extra-doc-files:    CHANGELOG.md

extra-source-files: README.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
      Data.Semigroup.Action

    build-depends:
      base >= 4.14.0.0 && < 5,
      groups,
      auto-lift-classes

    hs-source-dirs:   src
    default-language: Haskell2010

test-suite acts-fd-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
      base,
      acts-fd
